# tater

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-android.yml  rust.yml
dns/: Cargo.toml
dns/src/: constants.rs  lib.rs  main.rs
mint/: Cargo.toml  README.md  build.rs  proto.md
mint/conf/: fake-req.txt
mint/src/: fake.rs  key.rs  main.rs  proto.rs
socks5/: Cargo.toml  README.md  build.rs
socks5/src/: addr.rs  client.rs  common.rs  lib.rs  main.rs  server.rs  upstream.rs
src/: fake_dns.rs  fake_pool.rs  main.rs  tproxy.rs
tater/: Cargo.toml  README.md  build.rs
tater/src/: fake_dns.rs  fake_pool.rs  lib.rs  main.rs  tproxy.rs
utils/: Cargo.toml
utils/src/: lib.rs  pretty.rs
