[package]
edition = "2024"
name = "mint"
version = "0.1.0"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
env_logger = "*"
log = { version = "*", features = ["release_max_level_debug"] }

aead = { version = "*", features = ["bytes"] }
base64 = "*"
bytes = "1"
chacha20poly1305 = "*"
rand = "*"
tokio = { version = "1", features = ["macros", "rt", "io-util", "net", "time"] }

socks5 = { path = "../socks5" }

[build-dependencies]
utils = { path = "../utils" }
