[package]
edition = "2024"
name = "mint"
version = "0.1.0"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
env_logger = "*"
log = { version = "*", features = ["release_max_level_debug"] }

base64 = "*"
# chacha20poly1305 0.11 not stable yet, 0.10 depends on aead 0.5
chacha20poly1305 = "*"
aead = { version = "^0.5", features = ["bytes"] }
rand = "*"
tokio = { version = "1", features = ["macros", "rt", "io-util", "net", "time"] }

socks5 = { path = "../socks5" }

[build-dependencies]
utils = { path = "../utils" }
