[package]
edition = "2024"
name = "mint"
version = "0.1.0"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
env_logger = "*"
log = { version = "*", features = ["release_max_level_debug"] }

chacha20poly1305 = { version = "*", default-features = false, features = [
	"bytes",
	"getrandom",
] }
rand = { version = "*", default-features = false, features = ["sys_rng"] }
base64 = "*"
tokio = { version = "1", features = ["macros", "rt", "io-util", "net", "time"] }
hickory-resolver = { version = "*", default-features = false, features = [
	"tokio",
] }

socks5 = { path = "../socks5" }

[dev-dependencies]
chacha20poly1305 = { version = "*", default-features = false, features = [
	"reduced-round",
] }

[build-dependencies]
utils = { path = "../utils" }
