[package]
edition = "2024"
name = "tater"
version = "0.1.0"

[dependencies]
clap = { version = "*", features = ["derive", "env"] }
env_logger = "*"
log = { version = "*", features = ["release_max_level_debug"] }

socket2 = { version = "*", features = ["all"] }
tokio = { version = "1", features = [
	"net",
	"rt",
	"macros",
	"signal",
	"sync",
	"io-util",
	"time",
] }

dns = { path = "../dns" }

[build-dependencies]
utils = { path = "../utils" }
